# NormalPainter

./: .gitignore  Readme.md  Readme_EN.md  package.json
.NormalPainter/Assets/: UTJ
.NormalPainter/Plugin/: build.bat
.NormalPainter/Plugin/NormalPainter/: CMakeLists.txt  NormalPainter.h  npPenTablet_Win.cpp  pch.h
Assets/Editor/: NormalPainterWindow.cs  ObjExporter.cs
Assets/UTJ/NormalPainter/Data/: DefaultSettings.asset
Assets/UTJ/NormalPainter/Editor/: NormalPainterEditor.cs
Assets/UTJ/NormalPainter/Scripts/: NormalPainter_impl.cs
Assets/UTJ/NormalPainter/Shaders/: Overlay.shader  Visualizer.shader
NormalPainter/Assets/: BlendShapeBuilderPackaging.cs  BlendShapeEditorPackaging.cs
NormalPainter/Assets/Tests/Scripts/: MiscTests.cs  PluginTestRunner.cs  TestGenerateTangents.cs
NormalPainter/Assets/UTJ/BlendShapeBuilder/Editor/: BlendShapeBuilderData.cs  BlendShapeBuilderWindow.cs  BlendShapeInspectorWindow.cs  Utils.cs
NormalPainter/Assets/UTJ/BlendShapeEditor/Editor/: BlendShapeEditorData.cs  BlendShapeEditorWindow.cs  BlendShapeInspectorWindow.cs  Utils.cs
NormalPainter/Assets/UTJ/FbxExporter/Editor/: FbxExporterWindow.cs
NormalPainter/Assets/UTJ/FbxExporter/Scripts/: FbxExporter.cs  FbxExporter_impl.cs
NormalPainter/Assets/UTJ/NormalPainter/Data/: DefaultSettings.asset
NormalPainter/Assets/UTJ/NormalPainter/Editor/: NormalPainterEditor.cs  NormalPainterWindow.cs  ObjExporter.cs
NormalPainter/Assets/UTJ/NormalPainter/Scripts/: NormalPainter.cs  NormalPainterSettings.cs  NormalPainter_impl.cs  PinnedArray.cs
NormalPainter/Assets/UTJ/NormalPainter/Shaders/: BakeNormalMap.shader  Brush.shader  BrushShape.shader  Visualizer.shader
Plugin/: CMakeLists.txt  FbxExporterCore.vcxproj  FbxExporterCore.vcxproj.filters  MeshUtils.vcxproj  MeshUtils.vcxproj.filters  NormalPainter.sln  NormalPainter.vcxproj  NormalPainter.vcxproj.filters  NormalPainterCore.sln  NormalPainterCore.vcxproj  build.bat  setup.bat  setup.vcxproj
Plugin/FbxExporter/: FbxExporter.cpp  FbxExporter.h  fbxeContext.cpp  fbxeContext.h  fbxeUtils.h  pch.h
Plugin/MeshUtils/: CMakeLists.txt  MeshUtils.cpp  MeshUtils.h  MeshUtilsCore.ispc  MeshUtilsCore2.ispc  MeshUtils_impl.h  ispcmath.h  muConcurrency.h  muIntrusiveArray.h  muIterator.h  muMath.cpp  muMath.h  muMeshRefiner.cpp  muMisc.cpp  muMisc.h  muRawVector.h  muSIMD.cpp  muSIMD.h  pch.h
Plugin/NormalPainter/: CMakeLists.txt  NormalPainter.cpp  NormalPainter.h  PenTablet_Win.cpp  npFBXExporter.cpp  npFBXExporter.h  pch.h
Plugin/NormalPainter/WinTab/: Import.cpp  Import.h  MIT-license.txt  MSGPACK.H  PKTDEF.H
Plugin/Test/: CMakeLists.txt  MeshGenerator.cpp  MeshGenerator.h  Test.cpp  Test.h  Test.vcxproj  Test.vcxproj.filters  TestDLL.vcxproj  TestFBXExport.cpp  TestFbxExporter.cpp  TestMeshUtils.cpp  Tests.cpp  pch.h
Plugin/cmake/: AddPlugin.cmake  FindFBX.cmake  ISPC.cmake
Plugin~/: CMakeLists.txt  NormalPainterCore.sln  NormalPainterCore.vcxproj
Plugin~/NormalPainter/: CMakeLists.txt
com.utj.normalpainter/: UTJ
